--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest ---watch"
+    "test:watch": "jest ---watchAll"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
     "@types/jest": "^27.4.0",
+    "babel-jest": "^27.4.6",
     "jest": "^27.4.7"
   }
 }
