--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@types/jest": "^27.4.0",
     "babel-jest": "^27.4.6",
     "jest": "^27.4.7"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
